# oscilloscope_scripts

./: .gitignore  Continuous_savewaveform_use_fullpyvisa.py  LICENSE  MUX64Test_Analysis.py  MUX64_TEST.C  MUX64_TEST.h  MUX64_TEST_Selector.C  MUX64_TEST_Selector.h  MakeWorkspaceForGain.C  OutputCharge.C  OutputCharge.h  Plot_waveform_from_root.py  QuickAnalysis.py  README.md  Tektronix_continuous_savewaveform.py  Transform_csv_to_tree.py  Transform_csv_to_tree_MUX64TEST.py  UseWorkspaceForFit.C  __init__.py  analysis_waveform.C  analysis_waveform.h  analysis_waveform_data.py  pyproject.toml  setup.py  single_channel_selector.C  single_channel_selector.h  test-CH1-0.csv
Tektronix_TBS2000B_analysis/: QuickAnalysis.py  __init__.py  __main__.py
Tektronix_TBS2000B_control/: __init__.py  oscilloscope_control.py
Tektronix_TBS2000B_scripts/: __init__.py  __main__.py  helper_function.py
my_oscilloscope_package/: Continuous_savewaveform_use_fullpyvisa.py  Oscilloscope.py  RunMeasurement.py  test_Loop.py
naive_bayesian_classifier/: Bayesian_classifier.py  naive_bayesian_classifier.py  naive_bayesian_classifier_CH2.py
oscilloscope_scripts_xzf8971.egg-info/: PKG-INFO
scripts_need_ROOT/: OutputCharge.C  OutputCharge.h  UseWorkspaceForFit.C  single_channel_selector.C  single_channel_selector.h
scripts_need_ROOT/naive_bayesian_classifier/: Event.py  naive_bayesian_classifier.py
zichangge/: StaticTest.py  afg3k.py  mso4k.py
